--- a/style.css
+++ b/style.css
@@ -69,19 +69,23 @@ button:hover {
     body {
         margin: 0;
         padding: 0;
+        min-height: 100vh;
+        min-width: 100vw;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
     @page {
         margin: 10mm 10mm 10mm 10mm;
     }
     .resi-output {
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 150mm;
-        height: 95mm;
+        position: static;
+        width: 140mm;
+        height: 90mm;
         margin: 0;
         box-shadow: none;
         border: none;
         padding: 16px 16px;
+        /* Centered by flexbox parent */
     }
 }
